# extravagance

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  extravagance.cabal  stack-docker.yaml  stack.yaml
resources/redaction/TUnion/: redactingToString.java  sensitiveFieldsDeclaration.java  toString_redacted.java
src/: Accessors.hs  Extravagance.hs  Main.hs  Replacer.hs  Util.hs
