name:                extravagance
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pwestling/extravagance#readme
license:             BSD3
license-file:        LICENSE
author:              Porter Westling
maintainer:          pwestling@gmail.com
copyright:           2018 Porter Westling
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable extravagance
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Replacer, Accessors, Extravagance
  build-depends:       base >= 4.7 && < 5,language-java,syb, lens, containers, directory-tree, text, debug,regex-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pwestling/extravagance
